Add solution for Part04-Lesson03, collection api in java 11