@@ -22,9 +22,7 @@ public class ConvertArrayToListTest {
                 {1, 2},
                 {3, 4}
         };
-        List<Integer> expect = Arrays.asList(
-                1, 2, 3, 4
-        );
+        List<Integer> expect = List.of(1, 2, 3, 4);
         List<Integer> result = arrayConverter.toList(input);
         assertThat(result, is(expect));
     }
@@ -39,9 +37,7 @@ public class ConvertArrayToListTest {
                 {1, 2, 3, 4, 5},
                 {6, 7, 8, 9, 10}
         };
-        List<Integer> expect = Arrays.asList(
-                1, 2, 3, 4, 5, 6, 7, 8, 9, 10
-        );
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
         List<Integer> result = arrayConverter.toList(input);
         assertThat(result, is(expect));
     }
@@ -59,9 +55,7 @@ public class ConvertArrayToListTest {
                 {7, 8},
                 {9, 10}
         };
-        List<Integer> expect = Arrays.asList(
-                1, 2, 3, 4, 5, 6, 7, 8, 9, 10
-        );
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
         List<Integer> result = arrayConverter.toList(input);
         assertThat(result, is(expect));
     }
@@ -80,9 +74,7 @@ public class ConvertArrayToListTest {
                 {9}
 
         };
-        List<Integer> expect = Arrays.asList(
-                1, 2, 3, 4, 5, 6, 7, 8, 9
-        );
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6, 7, 8, 9);
         List<Integer> result = arrayConverter.toList(input);
         assertThat(result, is(expect));
     }
@@ -111,14 +103,13 @@ public class ConvertArrayToListTest {
     @Test
     public void whenListWithThreeArraysConvertToCommonListThenListWithAllArraysContentsReturned() {
         ConvertArrayToList listOfArraysConverter = new ConvertArrayToList();
-        List<int[]> inputList = new ArrayList<>();
-        inputList.addAll(Arrays.asList(
+        List<int[]> inputList = List.of(
                 new int[]{1, 2},
                 new int[]{3, 4},
                 new int[]{5, 6}
-        ));
+        );
         List<Integer> result = listOfArraysConverter.convert(inputList);
-        List<Integer> expect = Arrays.asList(1, 2, 3, 4, 5, 6);
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6);
         assertThat(result, is(expect));
     }
 
@@ -128,15 +119,14 @@ public class ConvertArrayToListTest {
     @Test
     public void whenListWithFourDifferentLengthArraysConvertToCommonListThenListWithAllArraysContentsReturned() {
         ConvertArrayToList listOfArraysConverter = new ConvertArrayToList();
-        List<int[]> inputList = new ArrayList<>();
-        inputList.addAll(Arrays.asList(
+        List<int[]> inputList = List.of(
                 new int[]{1, 2, 3, 4},
                 new int[]{5, 6, 7},
                 new int[]{8, 9},
                 new int[]{10}
-        ));
+        );
         List<Integer> result = listOfArraysConverter.convert(inputList);
-        List<Integer> expect = Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
         assertThat(result, is(expect));
     }
 
@@ -146,11 +136,10 @@ public class ConvertArrayToListTest {
     @Test
     public void whenListWithTwoEmptyArraysConvertToCommonListThenEmptyListReturned() {
         ConvertArrayToList listOfArraysConverter = new ConvertArrayToList();
-        List<int[]> inputList = new ArrayList<>();
-        inputList.addAll(Arrays.asList(
+        List<int[]> inputList = List.of(
                 new int[]{},
                 new int[]{}
-        ));
+        );
         List<Integer> result = listOfArraysConverter.convert(inputList);
         List<Integer> expect = new ArrayList<>();
         assertThat(result, is(expect));
